--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 .App {
   text-align: center;
 }
@@ -35,4 +36,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.fade-in {
+  opacity: 1 !important;
+  transition: opacity 1s ease-in-out;
 }
