--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,22 @@ code {
   scrollbar-width: none;  /* Firefox */
 }
 
+@keyframes fadeInText {
+  0% {
+      opacity: 0;
+      transform: translateY(20px); /* 처음에는 아래로 내려온 상태로 시작합니다. */
+  }
+  100% {
+      opacity: 1;
+      transform: translateY(0); /* 나타날 때는 위로 올라오는 애니메이션을 적용합니다. */
+  }
+}
+
+.text-fade-in {
+  animation: fadeInText 1s ease forwards; /* 애니메이션을 적용하고, 1초간 진행되며 끝에 상태를 유지합니다. */
+  opacity: 0; /* 처음에는 투명하게 시작합니다. */
+}
+
 @font-face {
   font-family: 'GrandifloraOne-Regular';
   src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_JAMO@1.0/GrandifloraOne-Regular.woff2') format('woff2');
